Created Controler for participants and changed allEvents to return Pages